# ChangeLog for x11-themes/gtk-engines-rezlooks
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/www/viewcvs.gentoo.org/raw_cvs/gentoo-x86/x11-themes/gtk-engines-rezlooks/ChangeLog,v 1.6 2008/12/20 18:58:42 maekke Exp $

  20 Dec 2008; Markus Meier <maekke@gentoo.org>
  gtk-engines-rezlooks-0.6.ebuild:
  amd64 stable, bug #251386

  18 Dec 2008; <ssuominen@gentoo.org> gtk-engines-rezlooks-0.6.ebuild:
  x86 stable

  03 Mar 2008; Saleem Abdulrasool <compnerd@gentoo.org>
  gtk-engines-rezlooks-0.6.ebuild:
  nightmorph claims gnome-look has fixed their distfile naming, so using ${PV} now

  14 Feb 2008; Santiago M. Mola <coldwind@gentoo.org>
  gtk-engines-rezlooks-0.6.ebuild:
  Keyword ~amd64 wrt bug #209315

  19 May 2007; Peter Weller <welp@gentoo.org>
  gtk-engines-rezlooks-0.6.ebuild:
  Keyworded ~x86-fbsd

*gtk-engines-rezlooks-0.6 (11 Feb 2007)

  11 Feb 2007; Saleem Abdulrasool <compnerd@gentoo.org> +metadata.xml,
  +gtk-engines-rezlooks-0.6.ebuild:
  Intial import of the rezlooks engine
