@@ -1,4 +1,4 @@
 DIST 39179-rezlooks-0.6.tar.gz 290016 RMD160 ad2ddd0480762982ce84010bae75ebaaa0eaed8a SHA1 629768c8a05f65771cf4a4f780ae773b37cb8aae SHA256 a7dbc45ba32b8f1f40a097d7bafbdff595464c4af16a5bbb9febf63d15cab699
 EBUILD gtk-engines-rezlooks-0.6.ebuild 1179 RMD160 82d91ae5bc851b7b7c943443f82959772de0076c SHA1 765e372b5e6e5fa73ee6e51110a9208442d662ad SHA256 5b8b50728bb52792b93608f9210a6ea4e67b72b15d782ecc2f9a64d37197c821
-MISC ChangeLog 1045 RMD160 aefb5403f3e00694fab9c8a0675fffe35a84af0f SHA1 f42687d70e770d7c40cd3f6742ecb6ae4de68bf3 SHA256 b1d091e7c3461567148be91debc00afec07dcfa1cde2af73188cc68b13d433c1
-MISC metadata.xml 380 RMD160 0c903e8e87e2b4944635964e2d5c514665612f87 SHA1 1e6102e75b3c1e513b1c7f71e5de8b7145263a8c SHA256 bb9e81459ea97cc8bfe60c9e6585156f1c94ceedf3595022564da3192bf9ae09
+MISC ChangeLog 1169 RMD160 c90abba41b9e1a554fa2aa879b997690cb7e29d1 SHA1 37a061903a4f68ac057114025bef58a53706c14b SHA256 a70d68dde63ee0548faf52922b5406daa598f3e8d1057dd2064ff1ee2c062e6a
+MISC metadata.xml 355 RMD160 842e47a100a5aa4673d79b5fe9fea9d43ea0e514 SHA1 df4b0e882d8d2397d96d10b8a97ae3b204ea9ea3 SHA256 f0ea2a5cf5294ab57fa297947b59cfedab58e4ba473156a60d3fe21a721518cd
