@@ -3,11 +3,9 @@
 <pkgmetadata>
 	<herd>no-herd</herd>
 	<maintainer>
-		<email>compnerd@gentoo.org</email>
-		<name>Saleem Abdulrasool</name>
-	</maintainer>
+		<email>maintainer-needed@gentoo.org</email>
+		</maintainer>
 	<longdescription lang="en">
 		Rezlooks GTK+ Engine, a modified version of the Clearlooks engine.
 	</longdescription>
 </pkgmetadata>
-
